# anomalous_sound_detection

./: .gitignore  README.md  learning_lesson.md  main.py  pipeline_test_mel.ipynb  pipeline_test_spec.ipynb  pyproject.toml  requirements.txt  test_setup.py
conf/: config.yaml
results/: conv_autoencoder_results.json  lof_results.json
src/: autoencoder copy.py  autoencoder.py  dataloader.py  evaluate.py  train.py  utils.py
